[package]
name = "twitch-event-log"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twitch_api2 = { version = "0.6.1", features = ["helix", "eventsub", "twitch_oauth2", "reqwest"] }
twitch_oauth2 = { version = "0.6.1", features = ["reqwest"] }
reqwest = "0.11.11"
tokio = { version = "1", features = ["full"] }
